# compfigurator

./: README.md  pyproject.toml
backups/: knowledge_base copy.json  main working v2.py  main working.py  main.py  streamlit_app copy.py  streamlit_app.py  ui-old.py
backups/for later/: expert_system_server.py  streamlit_ui.py
compfigurator/: knowledge_base.json  main.py  streamlit_app.py
