[tool.poetry]
name = "compfigurator"
version = "0.1.0"
description = "Expert System for Computer Configuration"
authors = ["Ravindu Weerasinghe <ravindutharuka2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
experta = "^1.9.4"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
